fix scrollbar ghosting

--- a/sass/scrollbar.scss
+++ b/sass/scrollbar.scss
@@ -2,6 +2,7 @@
 
 .scrollbar-container {
     position: absolute;
+    visibility: hidden;
     width: $scrollbar-width;
     top: 0px;
     right: 0px;
